Added gridlines to textbox and fixed minor transition error

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -41,7 +41,7 @@
 			</div>
 		<div id="parentTesting">
 			<h1>Test it out!</h1>
-			<iframe width="400" height="400" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=1A4C403F9DEBF618%211091&authkey=%21AHzMZLp-5heaHhU&em=2&wdAllowInteractivity=False&AllowTyping=True&ActiveCell='Numbers'!A1&Item='Numbers'!A1%3AD11&wdHideGridlines=True&wdInConfigurator=True&wdInConfigurator=True&edesNext=true&edrtees6=false&resen=false"></iframe>
+			<iframe width="400" height="400" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=1A4C403F9DEBF618%211091&authkey=%21AHzMZLp-5heaHhU&em=2&wdAllowInteractivity=False&wdHideHeaders=False&AllowTyping=True&ActiveCell='Numbers'!A1&Item='Numbers'!A1%3AD11&wdHideGridlines=False&wdInConfigurator=True&wdInConfigurator=True&edesNext=true&edrtees6=false&resen=false"></iframe>
 			<!--
 			    Google Sheets has some issues with non-editable rights. This may still be possible with Google AppScript.
 			
